@@ -259,6 +259,8 @@ PtkFileList *ptk_file_list_new ( VFSDir* dir, gboolean show_hidden )
 static void _ptk_file_list_file_changed( VFSDir* dir, VFSFileInfo* file,
                                         PtkFileList* list )
 {
+    if ( !file )
+        return;
     ptk_file_list_file_changed( dir, file, list );
 
     /* check if reloading of thumbnail is needed. */
