@@ -3,6 +3,7 @@
     manual note full/max col widths not saved #382
     adjust maximized and fullscreen behavior #382
     add su-to-root support
+    detect rename of current folder and close tab #243
 0.9.1   2013-11-06:
     [gtk 3.8] fix run dialog reverts to minimum size
     fix icon change not saved (bookmark, tab, devices, etc) #367
